Updates to diagnosis mgmt

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -255,6 +255,8 @@
 		"lat-n": "lat-NA",
 		"lat-Ri": "lat-R-inactive",
 		"lat-Li": "lat-L-inactive",
+		"lat-Rq": "lat-R-query",
+		"lat-Lq": "lat-L-query",
 		// note: laterality icon set did use TWO classes: e.g class="oe-i laterality R"
 		"laterality.R": "lat-R-green",
 		"laterality.L": "lat-L-red",
