Renamed restrict-data-shown (Not currently in production use)

--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -23,7 +23,7 @@
 @import "tables";
 @import "data-grouping";				// replaces 'data-row', 'field-row' AND adds <hr> divider
 @import "typography";					// None, Note, Large-text, etc
-@import "restrict-data-shown";
+@import "restrict-data-height";
 @import "eye-icon-header";
 @import "add-user-comments";
 
