Fix for big button icon colours in light theme

--- a/src/sass/3/openeyes/ui/add-select-search/_icon-btns.scss
+++ b/src/sass/3/openeyes/ui/add-select-search/_icon-btns.scss
@@ -18,6 +18,11 @@
 		@include flex(center, center);
 		
 		cursor: pointer;
+
+		.oe-i {
+			// invert to white  light theme
+			filter: $oe-btn-icon-hover;
+		}
 	}
 	
 	.close-icon-btn {
