Added in support for date/time default UI inputs

--- a/src/sass/3/openeyes/__config-classic.scss
+++ b/src/sass/3/openeyes/__config-classic.scss
@@ -16,6 +16,8 @@ $html-bg: rgb(37,35,35);
 $scroll-track: rgb(95,95,100);
 $scroll-thumb: rgb(170,170,170);
 
+$oe-scheme: light;
+
 // Text
 $oe-dark-text: 				rgb(220,220,220);
 $oe-dark-text-light: 		rgb(140,140,140);
