--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -15,6 +15,8 @@ $html-bg: rgb(16,25,37);
 $scroll-track: rgb(10,10,15);
 $scroll-thumb: rgb(55,55,60);
 
+$oe-scheme: dark;
+
 // Text 
 $oe-dark-text:				rgb(214,214,214);
 $oe-dark-text-light:		rgb(140,140,140);
