--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -55,6 +55,8 @@ $oe-grey:				$oe-dark-grey;
 $oe-dark-line: 			rgb(38,48,61);
 $oe-line:				$oe-dark-line; // don't use alphas, tables with td colspan 2 overlap
 
+// key focus outline
+$oe-key-focus-outline: rgb(9, 108, 154);
 
 // Buttons
 $oe-dark-btn-blue:			rgb(7,69,152);
