--- a/src/sass/3/print/_esign-device.scss
+++ b/src/sass/3/print/_esign-device.scss
@@ -77,7 +77,7 @@ body.e-sign-tablet {
 						opacity: 0.5;
 						height:64px;
 						width:64px;
-						background: center/contain url('../svg/in-css/icons/sync.svg') no-repeat; 
+						background: center/contain url('../svg/in-css/dark/i/sync.svg') no-repeat;
 						
 						@keyframes spin { 
 							100% { transform:rotate(360deg); } 
