--- a/src/sass/3/openeyes/ui/tables/_table-sort-order.scss
+++ b/src/sass/3/openeyes/ui/tables/_table-sort-order.scss
@@ -2,25 +2,38 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// Wrapper for Pagination and/or Sorting.
-// Design to sit above table if there is no 
-// table thead available or no space
-
+// Design to sit above table to handle in column sorting
+// can also wrap 'pagination'
 .table-sort-order {
-	
 	@include flex(center, space-between);
 	
 	// put this in here for now, limited usage
 	// and is only currenly used in this wrapper
 	// may have to review this again.
 	.sort-by {
+		@include flex(center, space-between);
 		color:$oe-text-light;
-		@include font-size(14);
-		font-weight: $oe-font-medium;
-		
-		select,
+		@include font-size(12);
+		font-weight: $oe-font-bold;
+
+		// to make sure <select> doesn't collapse down
+		width:320px;
+
+		.sort-options {
+			@include flex(center, space-between);
+			flex: 1 1 0;
+		}
+
+		select {
+			flex: 1 1 0;
+			margin:0 5px;
+		}
+
 		.direction {
-			margin:0 10px;
+			white-space: nowrap;
+			label {
+				margin: 0;
+			}
 		}
 	}
 	
