--- a/src/sass/3/openeyes/components/_user-profile.scss
+++ b/src/sass/3/openeyes/components/_user-profile.scss
@@ -27,7 +27,14 @@
 	
 	// buttons to save / update
 	.profile-actions {
+		@include flex(center, center);
+		gap:10px;
 		margin:40px 0 0 0;
+
+		button {
+			min-width: 200px;
+		}
+
 	}
 	
 }
