--- a/src/sass/3/openeyes/inputs/_label.scss
+++ b/src/sass/3/openeyes/inputs/_label.scss
@@ -82,6 +82,7 @@ label,
 		input {
 			margin-right:5px; // pad between input - text
 			opacity:0.8; // tone down the inputs slightly unless checked
+			outline-offset: 2px; // if prefilled, outline needs this
 			&:checked {
 				opacity:1;
 			}
