--- a/src/sass/3/openeyes/components/home/messages/_message-actions.scss
+++ b/src/sass/3/openeyes/components/home/messages/_message-actions.scss
@@ -8,7 +8,7 @@
 .home-messages {
 	
 	.message-actions {
-		padding:20px;
+		padding:10px;
 		border-right:1px solid $oe-big-search-bg; // vertical divider
 		@include font-size(12);
 		
@@ -27,56 +27,112 @@
 			font-weight: $oe-font-light;
 			color:$oe-blue-light;
 		}
-		
-		// wraps dropdowns 
-		.search-messages {
-			
+
+		// normal text in standard table
+		.standard.normal-text {
+			margin:0;
+			td {
+				@include font-size(12);
+			}
 		}
 		
+		// based on collapse-data
+		.mailbox {
+			// default vertical padding
+			margin: 5px 0;
+			padding: 5px 8px;
+			background-color: rgba($oe-user-inputs, 0.4);
+
+			.mailbox-hd {
+				@include flex(center, space-between);
+
+				@include font-size(14);
+				color: $oe-element-headers;
+				font-weight: $oe-font-medium;
+
+				.unread {
+					color:#fff;
+					background-color:$oe-btn-blue;
+				}
+
+				cursor: pointer;
+
+				// show user interaction
+				&:hover,
+				&:active {
+					color: $oe-text-highlight;
+				}
+			}
+
+			.mailbox-filters {
+				padding:5px 0 0 0;
+			}
+
+		}
+
+		// button
+		.all-unread-messages {
+			width:100%;
+			@include flex(center, space-between);
+
+			.unread {
+				color:#fff;
+				background-color:$oe-btn-blue;
+			}
+		}
+
+		// based on highlighter inverted
+		.unread {
+			@include flex( center, center);
+			height: 20px;
+			padding:0 4px;
+			border-radius:2px;
+			@include font-size(11);
+			font-weight: $oe-font-bold;
+			background: $oe-btn-blue-hint;
+			color: $oe-btn-text-on-hint;
+			user-select: none;
+		}
+
 		
 		// <ul> filters (unread etc)
-		.filter-messages {	
+		.filter-messages {
+			margin:10px 0;
 			li {
 				@include font-size(13);
 				color:$oe-text-light;
-				padding:0 0 10px 0;
+				padding:0 0 2px 0;
 				
 				// overwrite defaults
 				a {
 					display: block;
 					font-weight: $oe-font-medium;
-					
-					.count {
-						@include font-size(11);
-						font-weight: $oe-font-bold;
-						padding:0 0 0 5px;
-					}
-					
-					// based on highlighter inverted
-					.unread {
-						padding:1px 3px;
-						border-radius:2px;
-						@include font-size(11);
-						font-weight: $oe-font-bold;
-						background: rgba($oe-text,0.6);
-						color: $oe-text-inverted;
-					}
+					padding:2px;
+					border-bottom: 1px dotted transparent;
 
 					&:hover,
-					&:focus {
-						color:$oe-text-highlight;
+					&:focus,
+					&.selected {
+						color: $oe-text;
+						border-bottom-color:$oe-alert-grey;
+
 						.unread {
-							background-color: $oe-text
+							color:$oe-text-inverted;
+							background-color: $oe-text;
 						}
 					}
 				}
+
+				// mailbox count for Unread, Started..
+				.count {
+					@include font-size(11);
+					color: $oe-text-light;
+					font-weight: $oe-font-bold;
+					padding: 0 0 0 5px;
+				}
 			}
 		}
-		
-		// <button>
-		.send-message {
-			margin:0 0 20px 0;
-		}
+
 		
 		
 	}
