--- a/src/sass/3/openeyes/components/patient/meta/v2/_base.scss
+++ b/src/sass/3/openeyes/components/patient/meta/v2/_base.scss
@@ -1,15 +1,11 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
+.oe-patient-meta {
 
-// OE Patient Meta
-// used in Advanced Search, Trials and Theatre Diaries
-
-//@import "v1/oe-patient-meta";
-@import "v2/_all";
-@import "icons";
-
-
-
-
+	// same structure is use in .oe-patient-quick-overview
+	.oe-patient-quick-overview & {
+		padding: 0 0 5px 0;
+	}
+}
 
