New icon for Team added

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -238,6 +238,7 @@
 		"person": "person",
 		"person-green": "person-green",
 		"person-split": "person-split",
+		"team": "team",
 		"reset": "reset",
 		"undo": "undo",
 		"sync": "sync",
@@ -268,6 +269,7 @@
 		"save": "save",
 		"save-blue": "save-blue",
 		"save-plus": "add",
+		"save-team": "save-team",
 		"add": "add",
 		"add-blue": "add-blue",
 		"edit": "edit",
