Event messages UIX updates

--- a/src/sass/3/openeyes/components/home/messages/_messages-table.scss
+++ b/src/sass/3/openeyes/components/home/messages/_messages-table.scss
@@ -128,8 +128,8 @@
 				white-space: normal;
 			}
 
-			//
-			.msg-view {
+			// position the expand/collapse icon
+			.expand-message {
 				position: absolute;
 				top: 0;
 				bottom: 0;
