--- a/src/sass/3/openeyes/components/patient/popups/_demographics-trials.scss
+++ b/src/sass/3/openeyes/components/patient/popups/_demographics-trials.scss
@@ -3,7 +3,7 @@
 
 
 // Patient Demographics
-// table list of demograhic data
+// table list of demographic data
 // shown in the popup and then
 // also used in the quick overview
 
