--- a/src/sass/3/openeyes/components/patient/quick-overview/__base.scss
+++ b/src/sass/3/openeyes/components/patient/quick-overview/__base.scss
@@ -14,10 +14,12 @@
 	z-index: $oe-z-quicklook;
 	padding:5px 5px 5px 10px;
 	width: $side-panel-width;
-	min-height:100px; // provide a min-heigh for my load spinner thing
+	min-height:100px; // provide a min-height for my load spinner thing
+
+	border:1px solid $oe-text-highlight;
+	border-radius: 3px;
 	
 	// themed
-	border:1px solid rgba($oe-text,0.5);
 	background:$oe-popup-bg;
 	color:$oe-text;
 	
@@ -26,7 +28,7 @@
 	// 1) Floating popup version...
 	// wrap all the data content to handle overflow
 	.quick-overview-content {
-		height: 300px;
+		height: 280px;
 		overflow-y: auto;
 		padding:0 2px 0 0; // for scroll bars
 		
@@ -36,7 +38,25 @@
 			margin:10px 0;
 		}
 	}
-	
+
+	// full-panel - v2
+	// replaces the side panel approach.
+	// JS either places the full-panel to the left or right of eye-circle
+	// icon, full-panel only for all meta, individual icons use "float"
+	&.full-panel {
+		top: #{$oe-header-height * 2};
+		left: 0;
+		bottom:$oe-header-height;
+
+		.quick-overview-content {
+			// use height to manage scroll
+			height: calc( 100vh - #{$oe-header-height * 3 + 53px});
+		}
+	}
+
+
+	// side-panel - v1 implementation
+	// (depreciated)
 	// quick view can be views as a side-panel
 	// like hotlist. this allows much more data 
 	// to be shown but it takes space. It's used
@@ -66,7 +86,6 @@
 			height: calc( 100vh - #{$oe-header-height + 50px}); 
 			padding-bottom: 20px; // allow for tag
 		}
-		
 	}
 }
 
