--- a/src/sass/3/openeyes/components/patient/quick-overview/__base.scss
+++ b/src/sass/3/openeyes/components/patient/quick-overview/__base.scss
@@ -28,7 +28,6 @@
 	// 1) Floating popup version...
 	// wrap all the data content to handle overflow
 	.quick-overview-content {
-		height: 280px;
 		overflow-y: auto;
 		padding:0 2px 0 0; // for scroll bars
 		
@@ -39,18 +38,24 @@
 		}
 	}
 
+	&:not(.full-panel){
+		.quick-overview-content {
+			max-height: 220px;
+		}
+	}
+
 	// full-panel - v2
 	// replaces the side panel approach.
 	// JS either places the full-panel to the left or right of eye-circle
 	// icon, full-panel only for all meta, individual icons use "float"
 	&.full-panel {
 		top: #{$oe-header-height * 2};
-		left: 0;
+		left: 0; // JS needs to position this in relation to the icon
 		bottom:$oe-header-height;
 
 		.quick-overview-content {
 			// use height to manage scroll
-			height: calc( 100vh - #{$oe-header-height * 3 + 53px});
+			height: calc( 100vh - #{$oe-header-height * 3 + 65px});
 		}
 	}
 
