Fixed a bug for anchors within a button stack (sidepanel)

--- a/src/sass/3/openeyes/ui/typography/_anchor.scss
+++ b/src/sass/3/openeyes/ui/typography/_anchor.scss
@@ -10,6 +10,9 @@ a {
 	.oe-full-side-panel & {
 		display: inline-block;
 		min-width: 75%;
+		&.button {
+			display:inline-flex; // button button display
+		}
 	}
 	
 	&.hint {
