--- a/src/sass/3/openeyes/ui/_button-stack.scss
+++ b/src/sass/3/openeyes/ui/_button-stack.scss
@@ -9,6 +9,7 @@
 
 .button-stack { 
 
+	.button,
 	button {
 		width:100%;				// assume that buttons should fill area width, kinda standard design
 		margin-bottom: 10px;
@@ -18,6 +19,7 @@
 	}
 	
 	&.tight {
+		.button,
 		button {
 			margin-bottom:4px;
 		}
