Add Event, event list layout fix

--- a/src/sass/3/openeyes/components/popups/add-new-event/standardised/_oe-event-type.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/standardised/_oe-event-type.scss
@@ -14,6 +14,8 @@
 	.oe-event-type {
 		// shift to left to place icon flush
 		padding-left:0;
+		break-inside: avoid;
+		
 		.oe-i-e {
 			margin-right:10px;
 		}
