Drafts UIX minor CSS updates to support

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -209,6 +209,7 @@
 		"asterisk": "asterisk",
 		"asterisk-blue": "asterisk-blue",
 		"pencil": "pencil",
+		"draft": "draft",
 		"pencil-blue": "pencil-blue",
 		"exclamation": "exclamation",
 		"male": "male",
