--- a/src/sass/3/openeyes/components/hotlist/_activity-list.scss
+++ b/src/sass/3/openeyes/components/hotlist/_activity-list.scss
@@ -32,7 +32,8 @@
 					// icons, with v2 these are using a flex wrap
 					.oe-i {
 						width:28px;
-						height:28px;
+						height:24px;
+						background-position-y: top;
 					}
 				}
 
