--- a/src/sass/3/openeyes/components/hotlist/_overview.scss
+++ b/src/sass/3/openeyes/components/hotlist/_overview.scss
@@ -12,9 +12,9 @@
 		padding:10px 10px 5px 15px; 
 		
 		h3 {
-			@include font-size(17);
+			@include font-size(15);
 			color: $oe-dark-text;
-			font-weight:300;
+			font-weight:$oe-font-light;
 			
 			pointer-events: none;
 			
