--- a/src/sass/3/openeyes/components/sem/sidebar/event-list/_event-type.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/event-list/_event-type.scss
@@ -2,87 +2,88 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// OE Sidebar Event Nav 
-// (View)
+// OE Sidebar Event types
+// also, used in hotlist Draft list
 
+.event-type {
+	display: inline-block;
+	height: $oe-sidebar-event-height;
+	width: 48px;
 
-// <li>
-.event {
-	.event-type {
-		display: inline-block;
-		height:$oe-sidebar-event-height;
-		width:48px;
+	.oe-i-e {
+		// fix y-offset position issue
+		pointer-events: none; // JS needs this for the lightning previews
+		vertical-align: top;
+	}
 
-		.oe-i-e {
-			// fix y-offset position issue
-			pointer-events: none; // JS needs this for the lightning previews
-			vertical-align: top;
-		}
+	// background SVG icons
+	background-position: right 10px center;
+	background-repeat: no-repeat;
+	background-size: $oe-sidebar-event-height - 6px;
 
-		// background SVG icons
-		background-position: right 10px center;
-		background-repeat: no-repeat;
-		background-size: $oe-sidebar-event-height - 6px;
+	// eye for quicklook
+	background-image: url(svg-all("sidebar/eye"));
 
-		// eye for quicklook
-		background-image:url( svg-all('sidebar/eye') );
+	// warning star
+	&.alert {
+		background-image: url(svg-all("sidebar/warning"));
+	}
 
-		// warning star
-		&.alert {
-			background-image:url( svg-all('sidebar/warning') );
-		}
+	&.done,
+	&.ready {
+		background-image: url(svg-all("sidebar/tick"));
+	}
 
-		&.done,
-		&.ready {
-			background-image:url( svg-all('sidebar/tick') );
-		}
+	&.confirmed {
+		background-image: url(svg-all("sidebar/tick-double"));
+	}
 
-		&.confirmed {
-			background-image:url( svg-all('sidebar/tick-double') );
-		}
+	&.cancelled {
+		background-image: url(svg-all("sidebar/cross"));
+	}
 
-		&.cancelled {
-			background-image:url( svg-all('sidebar/cross') );
-		}
+	&.pause {
+		background-image: url(svg-all("sidebar/pause"));
+	}
 
-		&.pause {
-			background-image:url( svg-all('sidebar/pause') );
-		}
+	&.flag {
+		background-image: url(svg-all("sidebar/flag"));
+	}
 
-		&.flag {
-			background-image:url( svg-all('sidebar/flag') );
-		}
+	&.draft {
+		background-image: url(svg-all("sidebar/draft")); // orange pencil
+	}
 
-		&.draft {
-			background-image:url( svg-all('sidebar/draft') ); // orange pencil
-		}
+	//&.draft-warning {
+	//	background-image: url(svg-all("sidebar/draft-warning"));
+	//}
+	//
+	//&.draft-temp {
+	//	background-image: url(svg-all("sidebar/draft-temp"));
+	//}
 
-		&.draft-warning {
-			background-image:url( svg-all('sidebar/draft-warning') );
-		}
+	&.edit {
+		background-image: url(svg-all("sidebar/edit")); // grey pencil
+	}
 
-		&.edit {
-			background-image:url( svg-all('sidebar/edit') ); // grey pencil
-		}
+	&.edit-done {
+		background-image: url(svg-all("sidebar/edit-done")); // green pencil
+	}
 
-		&.edit-done {
-			background-image:url( svg-all('sidebar/edit-done') ); // green pencil
-		}
+	&.clock,
+	&.scheduled {
+		background-image: url(svg-all("sidebar/time"));
+	}
 
-		&.clock,
-		&.scheduled {
-			background-image:url( svg-all('sidebar/time') );
-		}
+	&.virtual-clinic {
+		background-image: url(svg-all("sidebar/vc"));
+	}
 
-		&.virtual-clinic {
-			background-image:url( svg-all('sidebar/vc') );
-		}
-
-		&.urgent {
-			background-image:url( svg-all('sidebar/urgent') );
-		}
+	&.urgent {
+		background-image: url(svg-all("sidebar/urgent"));
 	}
 }
+
 
 
 
