--- a/src/sass/3/openeyes/components/sem/sidebar/event-list/idg/_drafts.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/event-list/idg/_drafts.scss
@@ -7,7 +7,9 @@
 .sidebar { 
 	
 	ul.events.drafts {
-		margin:0 0 10px 0;	
+		margin:0 0 5px 0;
+		padding:5px 0;
+		border-bottom: 1px dotted rgb(220,100,0);
 	}
 }
 
