--- a/src/sass/3/openeyes/components/popups/add-new-event/v1/_lists.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/v1/_lists.scss
@@ -10,6 +10,11 @@
 		margin: 0 0 2px 0;
 		padding-left: 10px;
 
+		&.oe-specialty-service {
+			flex-direction: column;
+			align-items: flex-start;
+		}
+
 		&.context-list,
 		&.event-type-list {
 			height: 19px;
