Minor fix for Event sidebar layout

--- a/src/sass/3/openeyes/components/sem/sidebar/event-list/__base.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/event-list/__base.scss
@@ -9,13 +9,13 @@
 	// <li> 
 	.event {
 		position: relative;
-		display:block;
+		display: block;
 		margin: 0 0 1px 0;
 		
 		// nav link
 		a {
-			display:block;
 			position:relative;
+			@include flex( center, flex-start);
 			
 			height:$oe-sidebar-event-height;
 			line-height:$oe-sidebar-event-height;
