--- a/src/sass/3/openeyes/components/hotlist/_overview.scss
+++ b/src/sass/3/openeyes/components/hotlist/_overview.scss
@@ -12,6 +12,7 @@
 		padding:10px 10px 5px 15px; 
 		
 		h3 {
+			@include flex(center, flex-start);
 			@include font-size(15);
 			color: $oe-dark-text;
 			font-weight:$oe-font-light;
@@ -20,9 +21,21 @@
 			
 			// <small>
 			.count {
-				display: inline-block;
-				padding:0 0 0 6px;
-				color: $oe-dark-text-light;
+				@include flex(center, center);
+				height: 16px;
+				width: 16px;
+				border-radius: 3px;
+				background: #555;
+				@include font-size(10);
+				font-weight:500;
+				margin:0 0 0 10px;
+				opacity: 0.7;
+
+				&.issue {
+					background: $oe-alert-orange;
+					opacity: 1;
+				}
+
 			}
 		}
 		
