Updates to Exclamation icons

--- a/src/sass/3/openeyes/components/admin/__all.scss
+++ b/src/sass/3/openeyes/components/admin/__all.scss
@@ -11,6 +11,7 @@
 @import "admin-panels";
 @import "admin-nav";
 @import "admin-main";
+@import "admin-btns";
 @import "tables";
 @import "data-set";
 @import "restrict-filename";
