--- a/src/sass/3/openeyes/components/analytics/v2-themed/__all.scss
+++ b/src/sass/3/openeyes/components/analytics/v2-themed/__all.scss
@@ -2,8 +2,8 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// Analyitcs themed
-// Orginally Analyitcs was locked in 'pro-theme'
+// Analytics themed
+// Originally Analytics was locked in 'pro-theme'
 // as part of introducing Plot.ly to IDG theme-ing was
 // added ... it also uses the the standard layout classes
 @import "_base";
