--- a/src/sass/3/openeyes/components/admin/_admin-btns.scss
+++ b/src/sass/3/openeyes/components/admin/_admin-btns.scss
@@ -1,18 +1,14 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-
-.event-header {
-
-	// <h2>
-	.event-header-title {
-		position:absolute;
-		left:50px;
-		top:6px;
-		@include font-size(21);
-		font-weight:$oe-font-light;
-		color:$oe-element-headers;
-	}	
-	
+.admin-btns {
+	@include flex(center, center);
+	margin:0 20%;
+	gap:20px;
+	button {
+		flex: 1 1 0;
+	}
 }
+	
+
 
