--- a/src/sass/3/openeyes/ui/_flex.scss
+++ b/src/sass/3/openeyes/ui/_flex.scss
@@ -93,6 +93,19 @@
 	}
 }
 
+// from 5.8.0 (match singleCSS approach)
+.gap-30 {
+	gap:30px;
+}
+
+.gap-5 {
+	gap:5px;
+}
+
+.gap-10 {
+	gap:10px;
+}
+
 // for content items in a flex
 .flex-fill {
 	flex:1 1 0;
