Updates to newbluePlot layout controls

--- a/src/sass/3/openeyes/components/oescape/v2-themed/__all.scss
+++ b/src/sass/3/openeyes/components/oescape/v2-themed/__all.scss
@@ -5,5 +5,5 @@
 // (generic themed layout structure as per Analytics)
 @import "oes-v2";
 @import "data-awareness";
-@import "oes-hd-data-layout";
+@import "oes-ui-change-layout";
 @import "oes-layout-icons";
