--- a/src/sass/3/openeyes/components/oescape/v2-themed/_data-awareness.scss
+++ b/src/sass/3/openeyes/components/oescape/v2-themed/_data-awareness.scss
@@ -13,6 +13,7 @@
 		align-items:center;
 		margin:0 0 0 20px; 
 		border-left:2px solid $oe-line;
+		line-height: 1;
 		
 		
 		.group {
@@ -48,7 +49,7 @@
 				@include font-size(10);
 				font-weight:$oe-font-medium;
 				opacity:0.6;
-				padding:2px 0 0 0;
+				padding:3px 0 0 0;
 			}	
 		}
 	}
