--- a/src/sass/3/openeyes/components/oeplot/_toolbar.scss
+++ b/src/sass/3/openeyes/components/oeplot/_toolbar.scss
@@ -19,18 +19,15 @@
 		bottom:0;
 		height: $oe-event-header-height; 
 		z-index: 1;
-		background: $oe-blue-dark2;
+		background:$oe-grey;
 		
 		// center because of the "OE tag" bottom right:
 		@include flex( center, center );
 		@include font-size(11);
+		gap:30px;
 		
 		.plot-tool {
-			padding:0 10px; 
-			margin:0 10px;
-			
-			opacity: 0.7;
-			
+			@include flex( center, space-between);
 			label {
 				color: $oe-text-light;
 			}
