--- a/src/sass/3/openeyes/gaps/_pac-state-icon.scss
+++ b/src/sass/3/openeyes/gaps/_pac-state-icon.scss
@@ -2,7 +2,7 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-// PAC icons from external MEH App
+// PAC (Pre-Assessment Clinic) icons from external MEH App
 // use them and follow their colours
 
 span.pac-state-icon {
