Added task-flag UI widget

--- a/src/sass/3/openeyes/__all.scss
+++ b/src/sass/3/openeyes/__all.scss
@@ -43,6 +43,7 @@
 @import "ui/button-stack";					// button stack
 @import "ui/alert-box";						// alerts
 @import "ui/auto-alert";					// status
+@import "ui/task-flag";					    // task flag
 @import "ui/drug-admin-box";				// status
 @import "ui/tool-tip"; 						// tool tip (js generated)
 @import "ui/scrollbars";					// appy some feel
