--- a/src/sass/3/openeyes/ui/tables/__all.scss
+++ b/src/sass/3/openeyes/ui/tables/__all.scss
@@ -17,5 +17,6 @@
 @import "column-sort";
 @import "required";
 @import "tr-active";
+@import "tbl-hd";
 
 // @import "sortable"; not used, but DOM has class if I need hook 
