--- a/src/sass/3/openeyes/ui/_alert-box.scss
+++ b/src/sass/3/openeyes/ui/_alert-box.scss
@@ -8,7 +8,7 @@
 // Hard to know how many of these will be required in OEv3
 .alert-box {
 	padding:4px 10px;
-	margin:3px 0;
+	margin:3px 1px;
 
 	// default alert
 	@include font-size(13);
