Developing UIX for Form.io

--- a/src/sass/3/openeyes/components/sem/__all.scss
+++ b/src/sass/3/openeyes/components/sem/__all.scss
@@ -22,6 +22,8 @@
 
 @import "esign-check";			// MEH new esign widget
 
+@import "elem-widget/_all";          // element widget (create for form.io)
+
 
 
 
