New icon: Forms

--- a/src/sass/3/openeyes/components/sem/elem-widget/_chklst-sections.scss
+++ b/src/sass/3/openeyes/components/sem/elem-widget/_chklst-sections.scss
@@ -4,7 +4,7 @@
 // wrap arount all the sections with Form elements
 .chklst-sections {
 
-	margin:20px 0;
+	margin:10px 0 20px 0;
 
 	// auto column layout
 	display: grid;
