Form io customisation

--- a/src/sass/3/openeyes/__all.scss
+++ b/src/sass/3/openeyes/__all.scss
@@ -109,6 +109,8 @@
 @import "components/annotate-image";			// annotate image
 @import "components/capture";					// capture
 
-
 /* MEH gap work */
 @import "gaps/_all";							// MEH gaps
+
+/* Form.io */
+@import "components/formio/_all";
