--- a/src/sass/3/openeyes/components/formio/__all.scss
+++ b/src/sass/3/openeyes/components/formio/__all.scss
@@ -7,3 +7,6 @@
 @import "reset-formio";
 @import "formio-component-select";
 @import "form-check-label";
+@import "table";
+@import "input-text";
+@import "sr-only";
