--- a/src/sass/3/openeyes/components/formio/_label.scss
+++ b/src/sass/3/openeyes/components/formio/_label.scss
@@ -17,9 +17,18 @@
 
 		> label {
 			display:block;
-			width:100px;
+			width:30%;
 			white-space: normal;
-			@include font-size(13);
+			@include font-size(12);
+		}
+
+		// <div ref="element">
+		div[ref="element"]{
+			flex:1 1 0;
+		}
+
+		.form-radio {
+			flex: 1 1 0;
 		}
 	}
 }
