Form.io styling

--- a/src/sass/3/openeyes/components/formio/__all.scss
+++ b/src/sass/3/openeyes/components/formio/__all.scss
@@ -7,6 +7,7 @@
 @import "reset-formio";
 @import "formio-component-select";
 @import "form-check-label";
+@import "form-check-input";
 @import "table";
 @import "input-text";
 @import "sr-only";
