--- a/src/sass/3/openeyes/components/formio/_form-check-input.scss
+++ b/src/sass/3/openeyes/components/formio/_form-check-input.scss
@@ -1,12 +1,10 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-// elem-widget (create for form.io)
-
-@import "_base";
-@import "wdgt-title";
-
-@import "chklst-grp";
-@import "chklst-name";
-@import "chklst-progress";
-@import "chklst-sections";
+.oe-formio {
+	.form-check-input {
+		&:disabled   {
+			opacity: 0.1;
+		}
+	}
+}
