--- a/src/sass/3/openeyes/components/formio/_form-check-label.scss
+++ b/src/sass/3/openeyes/components/formio/_form-check-label.scss
@@ -1,32 +1,34 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-.form-check-label {
-	@include flex(center, flex-start);
-	flex-wrap: wrap;
-	gap:5px;
-	line-height: 1.2;
-	margin-bottom:1px; // give a visual line to help with input
-	padding:5px; // this was 3px 6px
-	border-radius:3px;
-	cursor:pointer;
-	background:$oe-user-inputs;
-	white-space: normal;
-
-	&:hover,
-	&:focus-within {
+.oe-formio {
+	.form-check-label {
+		@include flex(center, flex-start);
+		flex-wrap: wrap;
+		gap:5px;
+		line-height: 1.2;
+		margin-bottom:1px; // give a visual line to help with input
+		padding:5px; // this was 3px 6px
+		border-radius:3px;
+		cursor:pointer;
 		background:$oe-user-inputs;
-		input {
-			opacity:1;
-		}
-	}
+		white-space: normal;
 
-	// checkbox or radio within the <label>
-	input {
-		margin:0; // pad between input - text
-		opacity:0.8; // tone down the inputs slightly unless checked
-		&:checked {
-			opacity:1;
+		&:hover,
+		&:focus-within {
+			background:$oe-user-inputs;
+			input {
+				opacity:1;
+			}
+		}
+
+		// checkbox or radio within the <label>
+		input {
+			margin:0; // pad between input - text
+			opacity:0.8; // tone down the inputs slightly unless checked
+			&:checked {
+				opacity:1;
+			}
 		}
 	}
 }
