--- a/src/sass/3/openeyes/components/sem/elem-widget/_chklst-grp.scss
+++ b/src/sass/3/openeyes/components/sem/elem-widget/_chklst-grp.scss
@@ -1,12 +1,10 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-// elem-widget (create for form.io)
-
-@import "_base";
-@import "wdgt-title";
-
-@import "chklst-grp";
-@import "chklst-name";
-@import "chklst-progress";
-@import "chklst-sections";
+.chklst-grp {
+	.collapse-data-header-icon {
+		.highlighter {
+			margin-right:10px;
+		}
+	}
+}
