--- a/src/sass/3/openeyes/components/sem/elem-widget/_chklst-sections.scss
+++ b/src/sass/3/openeyes/components/sem/elem-widget/_chklst-sections.scss
@@ -8,8 +8,12 @@
 
 	// auto column layout
 	display: grid;
-	grid: auto-flow / repeat(auto-fit, minmax(350px, 1fr));
+	grid: auto-flow / repeat(auto-fit, minmax(320px, 1fr));
 	gap: 10px;
+
+	&.two-max {
+		grid: auto-flow / repeat(2, 1fr);
+	}
 
 	&.v-stack {
 		display: block;
