Updates to pathsteps UIX

--- a/src/sass/3/openeyes/components/pathstep/pathstep-btn/_buffer.scss
+++ b/src/sass/3/openeyes/components/pathstep/pathstep-btn/_buffer.scss
@@ -22,7 +22,8 @@
 	}
 	
 	// pathway owner column
-	&[class*="comments"] {
+	&.comments,
+	&.comments-added {
 		margin-left:10px;
 		background-color: rgba($oe-text,0.1);
 		border-color: transparent;
