--- a/src/sass/3/openeyes/components/clinic/_pathway.scss
+++ b/src/sass/3/openeyes/components/clinic/_pathway.scss
@@ -1,8 +1,8 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-
-table.oec-patients {
+// <table> in clinic manager
+.oec-patients {
 	// container for pathway-steps, used by js
 	.pathway {
 		@include flex( flex-start, flex-start );
