ed3 UIX updates

--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/_doodle-nav.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/_doodle-nav.scss
@@ -32,6 +32,7 @@
 	.eye-l & {
 		right: calc(100% - 38px);
 		border-right: none;
+		box-shadow: -3px 0 3px $oe-sem-element-bg;
 
 		.close-stack {
 			right: 100%;
@@ -42,6 +43,7 @@
 		flex-direction: row-reverse;
 		left: calc(100% - 38px);
 		border-left: none;
+		box-shadow: 3px 0 3px $oe-sem-element-bg;
 
 		.close-stack {
 			left: 100%;
